manifests/infra/argocd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: infra
      sectionName: http
  hostnames: [argocd.qtlab.dev]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: external
      namespace: infra
      sectionName: https
  hostnames: [argocd.qtlab.dev]
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
